Don't use qmlRegisterType with QT-5.14

Summary:
Building Plymouth-kcm-5.17.3 against Qt 5.14.0_beta3 fails to build.

I don't have much experience with QT/KDE programming but these
changes are sufficient to fix the build error on my end.

BUG: 414679

Reviewers: jriddell, #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: zzag, davidedmundson, asturmlechner, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D25624